--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/gleekl/game-db#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cloudinary": "^1.30.0",
     "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
@@ -25,6 +27,8 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
-    "mongoose": "^6.4.4"
+    "mongoose": "^6.4.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   }
 }
